--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,7 @@
 	font-size: 50px;
 	text-align: left;
 	border: 2px solid white;
+	
 }
 .bg2{
 	width: 100%;
@@ -29,25 +30,18 @@
           overflow: hidden;
 }
 .bg4{
-	width: 35%;
+	width: 30%;
 	height: 100px;
-	background-color: lightblue;
 	font-size: 50px;
+	background-color: lightblue;
 	text-align: center;
-	border: 2px solid white;
+	border: 5px solid white;
 	float: left;
+	margin-left: 20px;
+
 	
 }
-.bg5{
-	width: 64.3%;
-	height: 100px;
-	background-color: lightblue;
-	font-size: 50px;
-	text-align: center;
-	border: 2px solid white;
-	float: right;
-    
-}
+
 .footer{
 	width: 100%;
 	height: 100px;
@@ -56,5 +50,4 @@
 	text-align: center;
 	border: 2px solid white;
 	
-}
-	
+}	
